--- a/responsive-chal1.html
+++ b/responsive-chal1.html
@@ -7,8 +7,8 @@
     <title>OUR FLOWER SHOP</title>
 </head>
 <body>
-    <header>
-        <section id="first">
+  
+        <section class="first">
             <div>
                 <h1>Let's make beautiful flowers a part of your life </h1>
                 <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. 
@@ -17,13 +17,12 @@
             </div>
             <img src="/images/pngwing 10.png" alt="">
         </section>
-        <div id="second">
+        <div class="second">
             <h1>Our Featured Flowers</h1>
             <p>Our Featured Flowers
 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
         </div>
-    </header>
-    <main>
+  
         <section id="three">
             <div>
                 <img src="/images/pngwing 6.png" alt="" id="a"class="flower">
@@ -38,6 +37,39 @@ It is a long established fact that a reader will be distracted by the readable c
                 <h4>Yellow Flower Tree</h4>
             </div>
         </section>
-    </main>
+        <section id="forth">
+            <div>
+                <img src="/images/Group 57.png" alt="">
+                <p>Same Day Delivery. Click & Collect.</p>
+            </div>
+            <div>
+                <img src="/images/Group 58.png" alt="">
+                <p>Fresh Flowers. Local Growers.</p>
+            </div>
+            <div>
+                <img src="/images/Group 59.png" alt="">
+                <p>24/7 Free Support.</p>
+            </div>
+        </section>
+      <section class="first" id="five">
+            <div>
+                <h1>Hot Deal ! Sale Up To 25% Off </h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <button>Sign Up</button>
+            </div>
+            <img src="/images/pngwing 8.png" alt="" id="pic">
+        </section>
+        <div class="second">
+            <h1>Instagram</h1>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout..</p>
+            <div id="econd"><img src="/images/Flower 01.png" alt=""><img src="/images/Rectangle 4.png" alt=""><img src="/images/Rectangle 5.png" alt=""><img src="/images/Rectangle 6.png" alt=""></div>
+
+        <section>
+            <div><h1>Get The Latest Deals</h1>
+            <p>$30 coupon for first shopping</p></div>
+            <div><input type="email" name="" id="" placeholder="input your e-mail here">
+            <button>Subscibe</button></div>
+        </section>
+   
 </body>
 </html>
