--- a/responsive-chal1.html
+++ b/responsive-chal1.html
@@ -28,8 +28,7 @@ It is a long established fact that a reader will be distracted by the readable c
                 <img src="/images/pngwing 6.png" alt="" id="a"class="flower">
                 <h4>Pink Flower Tree</h4>
             </div>
-            <div>
-                <img src="/images/pngwing 5.png" alt="" id="b" class="flower">
+            <div>                <img src="/images/pngwing 5.png" alt="" id="b" class="flower">
                 <h4>Red Flower Tree</h4>
             </div>
             <div>
@@ -59,16 +58,25 @@ It is a long established fact that a reader will be distracted by the readable c
             </div>
             <img src="/images/pngwing 8.png" alt="" id="pic">
         </section>
-        <div class="second">
+        <div class="second" id="bla">
             <h1>Instagram</h1>
             <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout..</p>
-            <div id="econd"><img src="/images/Flower 01.png" alt=""><img src="/images/Rectangle 4.png" alt=""><img src="/images/Rectangle 5.png" alt=""><img src="/images/Rectangle 6.png" alt=""></div>
-
-        <section>
-            <div><h1>Get The Latest Deals</h1>
+            <div id="econd"><img src="/images/Flower 01.png" alt=""><img src="/images/Rectangle 4.png" alt=""><img src="/images/Rectangle 5.png" alt=""><img src="/images/Rectangle 6.png" alt="">
+            </div>
+        </div>
+          <section class="sixx">
+            <div>
+                <h1>Get The Latest Deals</h1>
             <p>$30 coupon for first shopping</p></div>
-            <div><input type="email" name="" id="" placeholder="input your e-mail here">
+            <div id="sp"><input type="email" name="" id="" placeholder="input your e-mail here">
             <button>Subscibe</button></div>
+        </section>
+        <section id="seven">
+            <div id="last">
+                <h1><span>Flower</span>Shop</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <p id="lastp">@2020-2023, FlowerShop.com. All rights reserved. </p>
+            </div>
         </section>
    
 </body>
