--- a/influence-gear.html
+++ b/influence-gear.html
@@ -26,5 +26,95 @@ Influencer</h1>
         <button class="btn">Preebook now    <i class="fa-solid fa-arrow-right"></div>
         <div id="img"><img src="/images/logos/main-camera.png" alt=""></div>
     </section>
+    <section class="cart">
+   <img src="/images/logos/Alibaba.svg" alt=""><img src="/images/logos/Amazon.svg" alt=""><img src="/images/logos/Daraz.pk Logo.svg" alt=""><img src="/images/logos/Ebay.svg" alt=""><img src="images/logos/Rakuten.svg" alt=""><img src="/images/logos/Walmart.svg" alt=""><img src="/images/logos/Target.svg" alt="">
+    </section>
+    <section class="collection">
+        <div><h3>Populer collection</h3></div>
+        <div class="container">
+            <div>
+                <img src="/images/logos/tripod.png" alt="">
+                <h1>Flex Tripod</h1>
+                <p>$50.47</p>
+                <p>Rating: ★★★★☆ (4.0)</p>
+                <p>wordwise shifting</p>
+                <p>available</p>
+                <p>Buyers protection possible</p>
+            </div>
+            <div>
+                <img src="/images/logos/airpod.png" alt="">
+                <h1>Airbuds</h1>
+              <p>$50.47</p>
+                <p>Rating: ★★★★☆ (4.0)</p>
+                <p>wordwise shifting</p>
+                <p>available</p>
+                <p>Buyers protection possible</p>
+            </div>
+            <div>
+                <img src="/images/logos/mic.png" alt="">
+                <h1>Microphone</h1>
+                  <p>$50.47</p>
+                <p>Rating: ★★★★☆ (4.0)</p>
+                <p>wordwise shifting</p>
+                <p>available</p>
+                <p>Buyers protection possible</p>
+            </div>
+            <div>
+                <img src="/images/logos/drone.png" alt="">
+                <h1>Drone</h1>
+                <p>$50.47</p>
+                <p>Rating: ★★★★☆ (4.0)</p>
+                <p>wordwise shifting</p>
+                <p>available</p>
+                <p>Buyers protection possible</p>
+            </div>
+            <div>
+                <img src="/images/logos/lights.png" alt="">
+                <h1>Light setup</h1>
+                 <p>$50.47</p>
+                <p>Rating: ★★★★☆ (4.0)</p>
+                <p>wordwise shifting</p>
+                <p>available</p>
+                <p>Buyers protection possible</p>
+            </div>
+            <div>
+                <img src="/images/logos/setup.png" alt="">
+                <h1>Photoshoot set</h1>
+                  <p>$50.47</p>
+                <p>Rating: ★★★★☆ (4.0)</p>
+                <p>wordwise shifting</p>
+                <p>available</p>
+                <p>Buyers protection possible</p>
+            </div>
+            <div>
+                <img src="/images/logos/camera.png" alt="">
+                <h1>Camera</h1>
+                  <p>$50.47</p>
+                <p>Rating: ★★★★☆ (4.0)</p>
+                <p>wordwise shifting</p>
+                <p>available</p>
+                <p>Buyers protection possible</p>
+            </div>
+            <div>
+                <img src="/images/logos/single-light.png" alt="">
+                <h1>Green Screen</h1>
+                <p>$50.47</p>
+                <p>Rating: ★★★★☆ (4.0)</p>
+                <p>wordwise shifting</p>
+                <p>available</p>
+                <p>Buyers protection possible</p>
+            </div>
+            <div>
+                <img src="/images/logos/action.png" alt="">
+                <h1>Action Camera</h1>
+                 <p>$50.47</p>
+                <p>Rating: ★★★★☆ (4.0)</p>
+                <p>wordwise shifting</p>
+                <p>available</p>
+                <p>Buyers protection possible</p>
+            </div>
+        </div>
+
+    </section>
 </body>
 </html>
