--- a/influence-gear.html
+++ b/influence-gear.html
@@ -30,91 +30,98 @@ Influencer</h1>
    <img src="/images/logos/Alibaba.svg" alt=""><img src="/images/logos/Amazon.svg" alt=""><img src="/images/logos/Daraz.pk Logo.svg" alt=""><img src="/images/logos/Ebay.svg" alt=""><img src="images/logos/Rakuten.svg" alt=""><img src="/images/logos/Walmart.svg" alt=""><img src="/images/logos/Target.svg" alt="">
     </section>
     <section class="collection">
-        <div><h3>Populer collection</h3></div>
+        <div><h3 class="fon head color">Populer collection</h3></div>
         <div class="container">
-            <div>
+            <div class="box color fon">
                 <img src="/images/logos/tripod.png" alt="">
                 <h1>Flex Tripod</h1>
-                <p>$50.47</p>
-                <p>Rating: ★★★★☆ (4.0)</p>
-                <p>wordwise shifting</p>
-                <p>available</p>
-                <p>Buyers protection possible</p>
+                <p class="para">$50.47</p>
+                <p class="paraone">Rating: <span>★★★★</span>☆ (4.0)</p>
+                <p class="paratwo">wordwise shifting</p>
+                <p class="paratwo">available</p>
+                <p class="paratwo">Buyers protection possible</p>
             </div>
-            <div>
+            <div class="box color fon">
                 <img src="/images/logos/airpod.png" alt="">
                 <h1>Airbuds</h1>
-              <p>$50.47</p>
-                <p>Rating: ★★★★☆ (4.0)</p>
-                <p>wordwise shifting</p>
-                <p>available</p>
-                <p>Buyers protection possible</p>
+                    <p class="para">$50.47</p>
+                <p class="paraone">Rating: <span>★★★★</span>☆ (4.0)</p>
+                <p class="paratwo">wordwise shifting</p>
+                <p class="paratwo">available</p>
+                <p class="paratwo">Buyers protection possible</p>
             </div>
-            <div>
+            <div class="fon color box">
                 <img src="/images/logos/mic.png" alt="">
                 <h1>Microphone</h1>
-                  <p>$50.47</p>
-                <p>Rating: ★★★★☆ (4.0)</p>
-                <p>wordwise shifting</p>
-                <p>available</p>
-                <p>Buyers protection possible</p>
+                        <p class="para">$50.47</p>
+                <p class="paraone">Rating: <span>★★★★</span>☆ (4.0)</p>
+                <p class="paratwo">wordwise shifting</p>
+                <p class="paratwo">available</p>
+                <p class="paratwo">Buyers protection possible</p>
             </div>
-            <div>
+            <div class="fon color box">
                 <img src="/images/logos/drone.png" alt="">
                 <h1>Drone</h1>
-                <p>$50.47</p>
-                <p>Rating: ★★★★☆ (4.0)</p>
-                <p>wordwise shifting</p>
-                <p>available</p>
-                <p>Buyers protection possible</p>
+                    <p class="para">$50.47</p>
+                <p class="paraone">Rating: <span>★★★★</span>☆ (4.0)</p>
+                <p class="paratwo">wordwise shifting</p>
+                <p class="paratwo">available</p>
+                <p class="paratwo">Buyers protection possible</p>
             </div>
-            <div>
+            <div class="fon color box">
                 <img src="/images/logos/lights.png" alt="">
                 <h1>Light setup</h1>
-                 <p>$50.47</p>
-                <p>Rating: ★★★★☆ (4.0)</p>
-                <p>wordwise shifting</p>
-                <p>available</p>
-                <p>Buyers protection possible</p>
+                     <p class="para">$50.47</p>
+                <p class="paraone">Rating: <span>★★★★</span>☆ (4.0)</p>
+                <p class="paratwo">wordwise shifting</p>
+                <p class="paratwo">available</p>
+                <p class="paratwo">Buyers protection possible</p>
             </div>
-            <div>
+            <div class="fon color box">
                 <img src="/images/logos/setup.png" alt="">
                 <h1>Photoshoot set</h1>
-                  <p>$50.47</p>
-                <p>Rating: ★★★★☆ (4.0)</p>
-                <p>wordwise shifting</p>
-                <p>available</p>
-                <p>Buyers protection possible</p>
+                   <p class="para">$50.47</p>
+                <p class="paraone">Rating: <span>★★★★</span>☆ (4.0)</p>
+                <p class="paratwo">wordwise shifting</p>
+                <p class="paratwo">available</p>
+                <p class="paratwo">Buyers protection possible</p>
             </div>
-            <div>
+            <div class="fon color box">
                 <img src="/images/logos/camera.png" alt="">
                 <h1>Camera</h1>
-                  <p>$50.47</p>
-                <p>Rating: ★★★★☆ (4.0)</p>
-                <p>wordwise shifting</p>
-                <p>available</p>
-                <p>Buyers protection possible</p>
+           <p class="para">$50.47</p>
+                <p class="paraone">Rating: <span>★★★★</span>☆ (4.0)</p>
+                <p class="paratwo">wordwise shifting</p>
+                <p class="paratwo">available</p>
+                <p class="paratwo">Buyers protection possible</p>
             </div>
-            <div>
+            <div class="fon color box">
                 <img src="/images/logos/single-light.png" alt="">
                 <h1>Green Screen</h1>
-                <p>$50.47</p>
-                <p>Rating: ★★★★☆ (4.0)</p>
-                <p>wordwise shifting</p>
-                <p>available</p>
-                <p>Buyers protection possible</p>
+                   <p class="para">$50.47</p>
+                <p class="paraone">Rating: <span>★★★★</span>☆ (4.0)</p>
+                <p class="paratwo">wordwise shifting</p>
+                <p class="paratwo">available</p>
+                <p class="paratwo">Buyers protection possible</p>
             </div>
-            <div>
+            <div class="fon color box">
                 <img src="/images/logos/action.png" alt="">
                 <h1>Action Camera</h1>
-                 <p>$50.47</p>
-                <p>Rating: ★★★★☆ (4.0)</p>
-                <p>wordwise shifting</p>
-                <p>available</p>
-                <p>Buyers protection possible</p>
+                 <p class="para">$50.47</p>
+                <p class="paraone">Rating: <span>★★★★</span>☆ (4.0)</p>
+                <p class="paratwo">wordwise shifting</p>
+                <p class="paratwo">available</p>
+                <p class="paratwo">Buyers protection possible</p>
             </div>
         </div>
 
+    </section>
+    <section class="features">
+        <div><img src="/images/logos/gear.png" alt=""></div>
+        <div class="wri fon"><h1>Featured products at one place</h1>
+        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+             Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+        <botton class="btn">Join Now  <i class="fa-solid fa-arrow-right"></i></botton></div>
     </section>
 </body>
 </html>
