--- a/index.html
+++ b/index.html
@@ -123,5 +123,11 @@ Influencer</h1>
              Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
         <botton class="btn">Join Now  <i class="fa-solid fa-arrow-right"></i></botton></div>
     </section>
+   <section class="foot">
+    <h1 class="fon">Influencer products</h1>
+    <p>Copyright © 2020  influencer products</p>
+    <p>All rights reserved</p>
+    <div><img src="/images/logos/Instagram.png" alt=""><img src="images/logos/Twitter.png" alt=""><img src="images/logos/Linkedin.png" alt=""><img src="/images/logos/Facebook.png" alt=""></div>
+   </section>
 </body>
 </html>
